--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp": "^3.8.10",
     "gulp-plumber": "^1.0.1",
     "instagram-node-lib": "^0.1.1",
+    "jquery": "^2.1.4",
+    "magnific-popup": "^1.0.0",
     "request": "^2.58.0",
     "socket.io": "^1.3.2",
     "supervisor": "^0.6.0"
