--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   "devDependencies": {
     "browser-sync": "^1.9.1",
     "del": "^1.1.1",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-browserify": "^0.5.1",
-    "gulp-compass": "^2.0.3",
     "gulp-imagemin": "^2.1.0",
     "gulp-minify-css": "^0.4.2",
     "gulp-notify": "^2.1.0",
+    "gulp-ruby-sass": "^1.0.5",
     "gulp-uglify": "^1.1.0",
     "vinyl-source-stream": "^1.0.0"
   }
